<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserInfo">
    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/UserInfo_Title"
    android:textSize="16sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/UserInfo_tvPtGender"
            android:textSize="16sp"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rdgIdGender"
            android:orientation="horizontal">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/UserMenu_genderMale"
                android:textSize="16sp"
                android:id="@+id/rdbId_Male"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/UserMenu_genderFemale"
                android:textSize="16sp"
                android:id="@+id/rdbId_Female"/>
        </RadioGroup>
    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/UserMenu_age"
        android:textSize="16sp"/>
    <Spinner
        android:id="@+id/spi_AgeYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/Age_Year">
    </Spinner>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/UserMenu_divide"
        android:textSize="16sp"/>
    <Spinner
        android:id="@+id/spi_AgeMonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/Age_Month">
    </Spinner>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/UserMenu_divide"
        android:textSize="16sp"/>
    <Spinner
        android:id="@+id/spi_AgeDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/Age_Day">
    </Spinner>
</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/UserInfo_tvPtPhone"
        android:textSize="16sp"/>
    <EditText
        android:id="@+id/edIdPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:textSize="16sp"
        android:hint="@string/UserInfo_htPhone"/>
</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"></LinearLayout>

    <Button
    android:id="@+id/btId_userinfo_OK"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:text="@string/UserInfo_btOK" />
</LinearLayout>

