<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".MainActivity">
    <ImageView
        android:layout_width="305dp"
        android:layout_height="260dp"
        android:scaleType="fitCenter"
        android:src="@drawable/coffee_3"
        android:layout_marginTop="10dp"
        android:layout_gravity="center" />
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:hint="@string/Ht_UserName"
            android:id="@+id/Edid_UserName" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
       <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:hint="@string/Ht_UserPw"
            android:id="@+id/Edid_UserPw"
            android:inputType="textPassword"
           />

    </LinearLayout>
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:hint="@string/Ht_UserEmail"
            android:id="@+id/Edid_UserEmail" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/Bt_Login"
            android:textSize="20sp"
            android:id="@+id/Btid_Login" />
        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/Bt_Register"
            android:textSize="20sp"
            android:id="@+id/Btid_Register" />
    </LinearLayout>

</LinearLayout>
